--- a/정리/2일차.md
+++ b/정리/2일차.md
@@ -54,3 +54,84 @@ public class MemberController {
         return  "member"; //View name
     }
 }
+```
+
+## 파라미터로 전송된 데이터를 @ModelAttribute 를 통해 Member 객체 매핑
+- Member.java
+```
+package com.sch.springboot.dto;
+
+public class Member {
+    //필드
+    private  String name;
+    private  int age;
+    private  String address;
+    private  String subject;
+
+    public String getSubject() {
+        return subject;
+    }
+
+    public void setSubject(String subject) {
+        this.subject = subject;
+    }
+
+    //생성자
+    public Member(){}
+    //매소드
+
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public int getAge() {
+        return age;
+    }
+
+    public void setAge(int age) {
+        this.age = age;
+    }
+
+    public String getAddress() {
+        return address;
+    }
+
+    public void setAddress(String address) {
+        this.address = address;
+    }
+}
+
+```
+
+- MemberController.java
+```
+package com.sch.springboot.controller;
+
+
+import com.sch.springboot.dto.Member;
+import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.ModelAttribute;
+import org.springframework.web.bind.annotation.RequestParam;
+
+@Controller
+public class MemberController {
+
+    @GetMapping("/member")
+    public String spring(@ModelAttribute Member member,  //form.html 이름과 Member 겟터 셋터 멤버변수 이름이 모두 같아야함 
+                         Model model) { //파라메터를 받는 매개변수 자리
+
+        model.addAttribute("member", member);
+
+
+        return  "member"; //View name
+    }
+}
+
+```
