--- a/정리/2일차.md
+++ b/정리/2일차.md
@@ -56,7 +56,7 @@ public class MemberController {
 }
 ```
 
-## 파라미터로 전송된 데이터를 @ModelAttribute 를 통해 Member 객체 매핑
+## 파라미터로 전송된 데이터를 @ModelAttribute 를 통해 Member 클레스의  객체 매핑
 - Member.java
 ```
 package com.sch.springboot.dto;
@@ -134,4 +134,35 @@ public class MemberController {
     }
 }
 
+```
+
+
+## @ResponseBody 를 사용하여 문자열 바로 넘기기
+- @RequestParam 이용
+```
+
+@Controller
+public class SpringController {
+
+    @ResponseBody  //View를 거치지 않고 문자혈 형태로 바로 전송
+    @GetMapping("/spring-api")
+    public String springApi(@RequestParam("name") String name, @RequestParam("age") String age,
+                            Model model) {
+
+        model.addAttribute("name", name);
+        model.addAttribute("age", age);
+        return model.toString();
+    }
+```
+
+- @ModelAttribute 이용
+```
+public class SpringController {
+
+    @ResponseBody  //View를 거치지 않고 문자혈 형태로 바로 전송
+    @GetMapping("/spring-api")
+    public String springApi(@ModelAttribute Member member) {
+
+        return member.toString();
+    }
 ```
