--- a/정리/2일차.md
+++ b/정리/2일차.md
@@ -140,7 +140,7 @@ public class MemberController {
 ## @ResponseBody 를 사용하여 문자열 바로 넘기기
 - @RequestParam 이용
 ```
-
+@ResponseBody
 @Controller
 public class SpringController {
 
@@ -153,6 +153,7 @@ public class SpringController {
         model.addAttribute("age", age);
         return model.toString();
     }
+}
 ```
 
 - @ModelAttribute 이용
@@ -165,4 +166,21 @@ public class SpringController {
 
         return member.toString();
     }
+}
+```
+
+## @RestController 이용 
+
+- REST API를 만들기 위한 컨트롤러 전용 애너테이션 JSON 형식
+```
+
+@RestController
+public class SpringRestController {
+    @GetMapping("/spring-api")
+    public String springApi() {
+
+        return "RestController Spring API";
+    }
+}
+
 ```
