--- a/정리/2일차.md
+++ b/정리/2일차.md
@@ -124,7 +124,7 @@ import org.springframework.web.bind.annotation.RequestParam;
 public class MemberController {
 
     @GetMapping("/member")
-    public String spring(@ModelAttribute Member member,  //form.html 이름과 Member 겟터 셋터 멤버변수 이름이 모두 같아야함 
+    public String spring( ℹ️@ModelAttribute Member member,  //form.html 이름과 Member 겟터 셋터 멤버변수 이름이 모두 같아야함 
                          Model model) { //파라메터를 받는 매개변수 자리
 
         model.addAttribute("member", member);
@@ -162,7 +162,7 @@ public class SpringController {
 
     @ResponseBody  //View를 거치지 않고 문자혈 형태로 바로 전송
     @GetMapping("/spring-api")
-    public String springApi(@ModelAttribute Member member) {
+    public String springApi( ℹ️@ModelAttribute Member member) {
 
         return member.toString();
     }
@@ -174,7 +174,7 @@ public class SpringController {
 - REST API를 만들기 위한 컨트롤러 전용 애너테이션 JSON 형식
 ```
 
-@RestController
+ ℹ️@RestController
 public class SpringRestController {
     @GetMapping("/spring-api")
     public String springApi() {
