--- a/정리/2일차.md
+++ b/정리/2일차.md
@@ -169,9 +169,9 @@ public class SpringController {
 }
 ```
 
-## @RestController 이용 
+## @RestController 이용 REST API를 만들기 위한 컨트롤러 전용 애너테이션 
 
-- REST API를 만들기 위한 컨트롤러 전용 애너테이션 JSON 형식
+- 문자열 형식
 ```
 
  ℹ️@RestController
@@ -184,3 +184,61 @@ public class SpringRestController {
 }
 
 ```
+
+- 객체 전송시 JSON 전송
+```
+@RestController
+public class SpringRestController {
+    @GetMapping("/spring-api")
+    public ℹ️Member springApi() {
+        Member member = new Member();
+
+        member.setName("홍길동");
+        member.setAge(30);
+        member.setAddress("춘천시");
+        member.setSubject("스프링 부트");
+
+        return ℹ️member;
+    }
+}
+```
+
+- @Controller 이용시 @ResponseBody 이용한 객체(JSON) 반환 ---> @RestController 와 같은 효과
+```
+ℹ️@Controller
+public class MemberController {
+
+    @GetMapping("/member")
+    public String member(....){}
+    
+
+
+    @PostMapping("/member")
+    public String submit(....) {}
+
+      
+
+    ℹ️@ResponseBody //사용 자제~
+    @PostMapping("/member-api")
+    public Member submit(@ModelAttribute Member member) {
+        return member;
+    }
+}
+```
+- Html
+```
+<form action="/member-api" method="post">
+    <ul>
+        <li>
+            <label>Name</label>
+            <input type="text" name="name">
+        </li>     
+        <li>
+            <button type="submit">Send</button>
+            <button type="reset">Cancle</button>
+        </li>
+    </ul>
+</form>
+```
+
+<img src ="image/RestController.png"  width = "600">
